--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -4473,7 +4473,7 @@ img {
 }
 
 .wpo-site-footer-s2::after {
-  background: linear-gradient(270deg, rgba(2, 59, 68, 0.5) 5.16%, #083943 36.3%, #0b3742 57.47%);
+  background: linear-gradient(270deg, rgba(11,160,138,255) 5.16%, #0ba08a 36.3%, #0ba08a 57.47%);
 }
 .wpo-site-footer-s2 .wpo-upper-footer {
   padding-top: 250px;
@@ -6818,7 +6818,7 @@ img {
   /* background: url(../images/netline/container-ship-floating-in-sea-2023-11-27-05-13-32-utc.webp) center/cover no-repeat; */
   background: #0b3742; /* Navy blue */
 
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: space-between;
 }
@@ -6827,7 +6827,7 @@ img {
   .wpo-cta-section-s2 .cta-wrapr,
   .wpo-cta-section-s3 .cta-wrapr {
     padding: 60px 50px;
-    display: block;
+    display: none;
   }
 }
 @media (max-width: 575px) {
@@ -7896,7 +7896,7 @@ img {
 .wpo-funfact-section-s2 .wraper,
 .wpo-funfact-section-s3 .wraper {
   border-radius: 8px;
-  background: #0B3742;
+  background: #0ba089;
   box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.05);
 }
 @media (max-width: 991px) {
