--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -622,7 +622,7 @@ img {
 
 .service-info {
   padding: 40px 20px;
-  background: rgba(0, 0, 0, 0.92);
+  background: rgba(1,160,138,255);
   text-align: center;
   width: 100%;
   margin-top: 40px;
